--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: java
+addons:
+  sonarcloud:
+    organization: "internet-software-architecture"
+    token: isa_sonar_cloud_2021
 script: 
     - cd server
     - mvn clean verify
+    - sonar-scanner
