--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ addons:
     token: isa_sonar_cloud_2021
 script: 
     - cd server
-    - mvn clean verify
-    - sonar-scanner
+    - mvn clean verify sonar:sonar -Pcoverage -Dsonar.projectKey=isa:project
