--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=@spring.profiles.active@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/isa?useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/isa
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=password
 # Create a new database schema named "isa" in MySqlWorkbench, before running this project.
