--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.profiles.active=@spring.profiles.active@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/isa?useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=helloworldNOVISAD021
+spring.datasource.password=${MYSQL_PASSWORD:}
 # Create a new database schema named "isa" in MySqlWorkbench, before running this project.
