Scheduling as a dermatologist frontend implemented (beta)

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.profiles.active=@spring.profiles.active@
+server.port=5000
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/isa?useLegacyDatetimeCode=false
 spring.datasource.username=root
