--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "v-calendar": "^2.2.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.0"
   },
