--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "v-calendar": "^2.2.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.0"
+    "vue-router": "^3.5.0",
+    "vue-toast-notification": "^0.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -39,7 +41,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars":"off"
+    }
   },
   "browserslist": [
     "> 1%",
