--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.profiles.active=@spring.profiles.active@
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/isa?useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=${MYSQL_PASSWORD:}
