--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,4 +5,10 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/isa?useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=${MYSQL_PASSWORD:}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=isa.pharmacy.app@gmail.com
+spring.mail.password=isa202021
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 # Create a new database schema named "isa" in MySqlWorkbench, before running this project.
