Email credentials hidden

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.username=root
 spring.datasource.password=${MYSQL_PASSWORD:}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=isa.pharmacy.app@gmail.com
-spring.mail.password=isa202021
+spring.mail.username=${MAIL_USERNAME:}
+spring.mail.password=${MAIL_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # Create a new database schema named "isa" in MySqlWorkbench, before running this project.
