--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "v-calendar": "^2.2.2",
