--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,11 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
+    "sass-loader": "^11.0.0",
     "v-calendar": "^2.2.2",
     "vue": "^2.6.11",
+    "vue-google-autocomplete": "^1.1.0",
+    "vue-place-autocomplete": "^0.5.3",
     "vue-router": "^3.5.0",
     "vue-toast-notification": "^0.6.0",
     "vuex": "^3.6.2"
