Pharmacy search and filtering

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.11",
     "vue-google-autocomplete": "^1.1.0",
     "vue-place-autocomplete": "^0.5.3",
+    "vue-range-component": "^1.0.3",
     "vue-router": "^3.5.0",
     "vue-star-rating": "^1.7.0",
     "vue-toast-notification": "^0.6.0",
