--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,9 @@ before_install:
 script: 
     - cd server
     - mvn clean verify sonar:sonar -Pcoverage -Dsonar.projectKey=isa:project
+deploy:
+  provider: heroku
+  api_key:
+    secure: $heroku-key
+
     
