--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ script:
 deploy:
   provider: heroku
   api_key:
-    secure: $heroku-key
+    secure: $HEROKU_KEY
+  app:
+    develop: isa-pharmacy
 
     
