--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ script:
     - mvn clean verify sonar:sonar -Pcoverage -Dsonar.projectKey=isa:project
 deploy:
   provider: heroku
-  api_key:
-    secure: $HEROKU_KEY
+  api_key: $HEROKU_KEY
   app:
     develop: isa-pharmacy
 
