--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=@spring.profiles.active@
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/isa?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/isa?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=CET
 spring.datasource.username=${MYSQL_USERNAME:root}
 spring.datasource.password=${MYSQL_PASSWORD:}
 spring.mail.host=smtp.gmail.com
